--- a/package.json
+++ b/package.json
@@ -6,18 +6,13 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "vite preview",
-    "deploy": "vercel --prod"
+    "start": "vite preview"
   },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "@solana/web3.js": "^1.95.3",
     "@walletconnect/solana-adapter": "^0.1.0",
-    "@aptos-labs/ts-sdk": "^1.0.0",
-    "@metaplex-foundation/umi": "^1.0.0",
-    "@metaplex-foundation/umi-bundle-defaults": "^1.0.0",
-    "@metaplex-foundation/mpl-token-metadata": "^1.0.0",
     "tailwindcss": "^3.4.0"
   },
   "devDependencies": {
